--- a/css/styles.css
+++ b/css/styles.css
@@ -33,10 +33,10 @@ p {
 button {
 /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fcf299+0,efe183+94 */
 background: #fcf299; /* Old browsers */
-background: -moz-linear-gradient(left,  #fcf299 0%, #efe183 94%); /* FF3.6-15 */
-background: -webkit-linear-gradient(left,  #fcf299 0%,#efe183 94%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to right,  #fcf299 0%,#efe183 94%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcf299', endColorstr='#efe183',GradientType=1 ); /* IE6-9 */
+/*background: -moz-linear-gradient(left,  #fcf299 0%, #efe183 94%); /* FF3.6-15 */
+/*background: -webkit-linear-gradient(left,  #fcf299 0%,#efe183 94%); /* Chrome10-25,Safari5.1-6 */
+/*background: linear-gradient(to right,  #fcf299 0%,#efe183 94%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcf299', endColorstr='#efe183',GradientType=1 ); /* IE6-9 */
 
     font-size: large;
     padding: 0.5rem 1rem;
@@ -45,7 +45,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcf299', end
     color:rgb(20, 44, 36);
     cursor: pointer;
 }
-button:hover {
+header button:hover {
     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#f8ffe8+0,e3f5ab+33,c4dd6a+100 */
 background: #f8ffe8; /* Old browsers */
 background: -moz-linear-gradient(left,  #f8ffe8 0%, #e3f5ab 33%, #c4dd6a 100%); /* FF3.6-15 */
@@ -76,8 +76,80 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8ffe8', end
     width: 100%;
     height: 100%;
     min-height: max-content;
+    max-height: width;
     margin: auto;
     font-size: 4rem;
     align-self: auto;
     text-align: center;
 }
+.inputCells:hover {
+    cursor: pointer;
+}
+.inputCells:disabled {
+    cursor: default;
+}
+.level {
+    width: 50%;
+    margin: auto;
+    display: flex;
+    justify-content: space-evenly;
+}
+.level p {
+    font-size: 2rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 700;
+}
+.active {
+    background: #2FFF72;
+}
+#imposible:hover {
+    transform: rotate(180deg);
+}
+
+/*pop-up de instrucciones-------------------------------*/
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+}
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+#popupBody{
+    width: 46%;
+    padding: 2%;
+    border-radius: 15px;
+    box-shadow: 0 0 5px #CCC;
+    background: #FFF;
+    position: relative;
+    transition: all 5s ease-in-out;
+    margin: 20% auto;    
+}
+#cerrar{
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #F00;
+}
+.instructions {
+    text-align: center;
+}
+.instructions a {
+    text-decoration: none;
+    /*font-size: 0.8rem;*/
+    color: #002008;
+}
+
+/* darle al clicado del botón otro color, y si se cambia el nivel volver a cambiarlo
